--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,11 +13,13 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
+
+    App\Entity\Donateur: ~ #j'ai rajouter cette ligne car j'avais une erreur  "Cannot autowire argument $donateur of "App\Controller\DonateurController::profil()"
     App\:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
+
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
